@@ -1,6 +1,7 @@
 2013-12-05 Clinton Wolfe 0.5.0
    Add looks_like => 'guid'
    Add looks_like => 'email'
+   Add looks_like => 'hostname'
 
 2013-11-15 Clinton Wolfe 0.4.0
    Add 'present' check
